--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "connect-four",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["game", "connect four", "fun"],
+  "author": "Andy Lindsay",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
