--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd ./client && npm install && npm run build && cd .. && node server.js"
+    "start": "node server.js",
+    "build": "cd client/ && npm install && npm run build"
   },
   "keywords": ["game", "connect four", "fun"],
   "author": "Andy Lindsay",
